--- a/.github/workflows/hello_world.yaml
+++ b/.github/workflows/hello_world.yaml
@@ -1,26 +1,25 @@
 name: Hello World
 on:
   push:
-    - main
+    branches:
+      - main
   pull_request:
     branches:
-      -main
+      - main
   workflow_dispatch:
 
-jobs: 
+jobs:
   hello:
-      runs-on: ubuntu-latest
-      steps: 
-        - uses: actions/checkout@v2
-        - name: hello-world
-          run: echo "Hello world"
-          shell: bash 
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: hello-world
+        run: echo "Hello world"
+        shell: bash
 
-   good-bye:
-      runs-on: ubuntu-latest
-      steps: 
-       - name: goodbye world
-         run: echo "GOod bye"
-         shell: bash  
-        
-
+  good-bye:
+    runs-on: ubuntu-latest
+    steps:
+      - name: goodbye world
+        run: echo "GOod bye"
+        shell: bash
